overflow fixed and ready to write

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -5,5 +5,5 @@ body {
 }
 
 body, html{
-  overflow:hidden;
+  overflow-x:hidden;
 }
